fix(card/responsive): resolve layout issue on screens >1400px wide and <1300px tall

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,4 +1,3 @@
-
 /* MEDIA QUERIES */
 /* For devices with a width greater than 768 */
 @media screen and (min-width: 768px) {
@@ -95,10 +94,11 @@
 @media screen and (min-width: 1400px) {
 
     /* For devices with a width greater than 1400 and a height greater than 1300 */
-    main{
+    main {
         width: 1159px;
         margin-top: 250px;
     }
+
     .quote-card {
         width: 100%;
     }
@@ -135,24 +135,26 @@
 
     /* For devices with a width greater than 1400 and a height less than 1300 */
     @media screen and (max-height: 1300px) {
-        main{
+        main {
             width: 80%;
             margin-top: 100px;
         }
+
         .quote-card {
             width: 100%;
             height: auto;
         }
 
         .quote-card .quote-card_title {
-            height: 70px;
-            line-height: 70px;
             font-size: 35px;
+            padding: 4px 80.715px;
+
         }
 
         .quote-card .quote-card_text {
             font-size: 30px;
-            line-height: 115px;
+            padding: 26px 81px;
+
         }
 
         .triangle-overlay {
@@ -171,6 +173,3 @@
         }
     }
 }
-
-
-
